-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar variable
The variable will contain an arbitrary value left from earlier computations. Use of an uninitialized variable
/src/mongo/db/traffic_recorder.cpp:149: UNINIT 177470 Declaring variable "checksum" without initializer.
- related to
-
SERVER-113102 Coverity analysis defect 177486: Uninitialized scalar variable
-
- Closed
-