SERVER-112669 Initialize scalar checksum in TrafficRecorder (#43199)

GitOrigin-RevId: ca0abb5d3f78a2f84d79f60bdb3b6bd28f7fc041